feat: upgrade config of 'picom'.

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,3 +1,5 @@
+# Fork from: https://github.com/yaocccc/scripts/blob/master/config/picom.conf
+
 # 基础设置
 backend = "glx";
 mark-wmwin-focused = true;
@@ -12,7 +14,7 @@ invert-color-include = [ ];
 glx-copy-from-front = false;
 
 # 圆角
-corner-radius = 7.0;
+corner-radius = 10.0;
 round-borders = 2;
 rounded-corners-exclude = [
     "class_g *= 'dwm'",
