upgrade: modify the cursor shape for kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -9,6 +9,9 @@ cursor_shape     block
 url_color        #0087bd
 url_style        dotted
 cursor_blink_interval 0
+shell_integration no-cursor
 #Close the terminal without confirmation
 confirm_os_window_close 0
-background_opacity 0.95
+background_opacity 0.9
+enable_audio_bell no
+window_padding_width 8
