feat: change kitty as a main terminal

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -120,7 +120,8 @@ device:epic mouse V1 {
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, alacritty
+# keycode 36 = Enter
+bind = $mainMod, 36, exec, kitty
 bind = $mainMod, C, killactive, 
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, doplin
@@ -128,6 +129,10 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, ~/.config/rofi/launcher.sh
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+
+# to switch between windows in a floating workspace
+bind = SUPER,Tab,cyclenext,          # change focus to another window
+bind = SUPER,Tab,bringactivetotop,   # bring it to the top
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
