feat: add flameshot and grimshot for Hyprland

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -130,6 +130,10 @@ bind = $mainMod, R, exec, ~/.config/rofi/launcher.sh
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
+# Screenshot by grimshot from https://github.com/swaywm/sway/blob/master/contrib/grimshot
+bind = $mainMod, S, exec, ~/scripts/grimshot/grimshot -n copy area
+bind = $mainMod SHIFT, S, exec, ~/scripts/grimshot/grimshot -n save area ~/Pictures/Screenshots/$(date +%F-%T).png
+
 # to switch between windows in a floating workspace
 bind = SUPER,Tab,cyclenext,          # change focus to another window
 bind = SUPER,Tab,bringactivetotop,   # bring it to the top
