--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -129,6 +129,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, ~/.config/rofi/launcher.sh
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, L, exec, ~/scripts/swaylock/swaylock.sh # lock screen
 
 # Screenshot by grimshot from https://github.com/swaywm/sway/blob/master/contrib/grimshot
 bind = $mainMod, S, exec, ~/scripts/grimshot/grimshot -n copy area
