chore: change the save screenshot method

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -11,7 +11,7 @@ OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=eDP-1,preferred,1920x0,1
-monitor=HDMI-A-1,preferred,0x0,1
+monitor=HDMI-A-1,1920x1080@75,0x0,1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -133,7 +133,7 @@ bind = $mainMod, L, exec, ~/scripts/swaylock/swaylock.sh # lock screen
 
 # Screenshot by grimshot from https://github.com/swaywm/sway/blob/master/contrib/grimshot
 bind = $mainMod, S, exec, ~/scripts/grimshot/grimshot -n copy area
-bind = $mainMod SHIFT, S, exec, ~/scripts/grimshot/grimshot -n save area ~/Pictures/Screenshots/$(date +%F-%T).png
+bind = $mainMod SHIFT, S, exec, grim -g "$(slurp -d)" - | swappy -f -
 
 # to switch between windows in a floating workspace
 bind = SUPER,Tab,cyclenext,          # change focus to another window
