chore: add mako support for Hyprland

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -25,6 +25,8 @@ exec-once = waybar -c ~/.config/waybar/config -s ~/.config/waybar/style.css
 exec-once = ~/.config/waybar/wallpaper_random.sh
 # input method
 exec-once = fcitx5 &
+# notification daemon
+exec-once = mako -c ~/.config/mako/config
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
