--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -122,8 +122,7 @@ device:epic mouse V1 {
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-# keycode 36 = Enter
-bind = $mainMod, 36, exec, kitty
+bind = $mainMod, Q, exec, kitty
 bind = $mainMod, C, killactive, 
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, doplin
