--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -22,7 +22,7 @@ monitor=HDMI-A-1,1920x1080@75,0x0,1
 # status bar
 exec-once = waybar -c ~/.config/waybar/config -s ~/.config/waybar/style.css
 # wallpaper
-exec-once = ~/.config/waybar/wallpaper_random.sh
+exec-once = swaybg -i ~/Pictures/Wallpapers/cats.png
 # input method
 exec-once = fcitx5 &
 # notification daemon
@@ -89,6 +89,16 @@ animations {
     animation = workspaces, 1, 6, default
 }
 
+misc {
+    disable_hyprland_logo = true
+    always_follow_on_dnd = true
+    layers_hog_keyboard_focus = true
+    animate_manual_resizes = false
+    enable_swallow = true
+    swallow_regex =
+    focus_on_activate = true
+}
+
 dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
     pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
@@ -125,8 +135,9 @@ $mainMod = SUPER
 bind = $mainMod, Q, exec, kitty
 bind = $mainMod, C, killactive, 
 bind = $mainMod, M, exit,
+bind = $mainMod, F, fullscreen,
 bind = $mainMod, E, exec, doplin
-bind = $mainMod, V, togglefloating, 
+bind = $mainMod, Space, togglefloating, 
 bind = $mainMod, R, exec, ~/.config/rofi/launcher.sh
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
@@ -137,8 +148,8 @@ bind = $mainMod, S, exec, ~/scripts/grimshot/grimshot -n copy area
 bind = $mainMod SHIFT, S, exec, grim -g "$(slurp -d)" - | swappy -f -
 
 # to switch between windows in a floating workspace
-bind = SUPER,Tab,cyclenext,          # change focus to another window
-bind = SUPER,Tab,bringactivetotop,   # bring it to the top
+bind = $mainMod, Tab, cyclenext,          # change focus to another window
+bind = $mainMod, Tab, bringactivetotop,   # bring it to the top
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
