chore: update hyprland/hyprland.conf
Added two window rules to make 'QQ for Linux', 'telegram', 'yesplaymusic' and 'thunderbrid' window be float.
Added an authentication agent autostart.

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -25,6 +25,8 @@ exec-once = waybar -c ~/.config/waybar/config -s ~/.config/waybar/style.css
 exec-once = swaybg -i ~/Pictures/Wallpapers/cats.png
 # input method
 exec-once = fcitx5 &
+# authentication agent
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
 # notification daemon
 exec-once = mako -c ~/.config/mako/config
 
@@ -126,6 +128,15 @@ device:epic mouse V1 {
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+
+# QQ for Linux
+windowrule = float, ^(QQ)$
+# thunderbird
+windowrule = float, ^(thunderbird)$
+# TG
+windowrulev2 = float, center, size: [1024, 720], class: ^(org\.telegram\.desktop)$
+# yesplaymusic
+windowrulev2 = float, center, size: [1024, 720], class: ^(yesplaymusic)$
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
