chore(hyprland): update config

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -22,13 +22,15 @@ monitor=HDMI-A-1,1920x1080@75,0x0,1
 # status bar
 exec-once = waybar -c ~/.config/waybar/config -s ~/.config/waybar/style.css
 # wallpaper
-exec-once = swaybg -i ~/Pictures/Wallpapers/cats.png
+exec-once = swaybg -i ~/Pictures/Wallpapers/default.png
 # input method
 exec-once = fcitx5 &
 # authentication agent
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 # notification daemon
 exec-once = mako -c ~/.config/mako/config
+# kdeconnect daemon
+exec-once = /usr/lib/kdeconnectd &
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
