chore(hyprland): add autostart for 'kdeconnect-indicator'

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -29,8 +29,9 @@ exec-once = fcitx5 &
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 # notification daemon
 exec-once = mako -c ~/.config/mako/config
-# kdeconnect daemon
+# kdeconnect daemon & kdeconnect indicator
 exec-once = /usr/lib/kdeconnectd &
+exec-once = /usr/bin/kdeconnect-indicator
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
